--- a/static/templates/cerberus-responsive.html
+++ b/static/templates/cerberus-responsive.html
@@ -244,12 +244,6 @@
 
         <!-- Email Body : BEGIN -->
         <table align="center" role="presentation" cellspacing="0" cellpadding="0" border="0" width="600" style="margin: auto;" class="email-container">
-	        <!-- Email Header : BEGIN -->
-            <tr>
-                {% include 'head_logo.html' %}
-            </tr>
-	        <!-- Email Header : END -->
-
             <!-- Hero Image, Flush : BEGIN -->
             <tr>
 				{% include 'head_image.html' %}
@@ -288,30 +282,12 @@
 	    <!-- Email Footer : END -->
 
 	    <!-- Full Bleed Background Section : BEGIN -->
-	    <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="100%" style="background-color: #709f2b;">
-	        <tr>
-	            <td>
-	                <div align="center" style="max-width: 600px; margin: auto;" class="email-container">
-	                    <!--[if mso]>
-	                    <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="600" align="center">
-	                    <tr>
-	                    <td>
-	                    <![endif]-->
-	                    <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="100%">
-	                        <tr>
-	                            <td style="padding: 20px; text-align: left; font-family: sans-serif; font-size: 15px; line-height: 20px; color: #ffffff;">
-	                                <p style="margin: 0;">{{ bottom_section_article }}</p>
-	                            </td>
-	                        </tr>
-	                    </table>
-	                    <!--[if mso]>
-	                    </td>
-	                    </tr>
-	                    </table>
-	                    <![endif]-->
-	                </div>
-	            </td>
-	        </tr>
+        <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="100%" style="background-color: #ffffff;">
+	        <!-- Email Header : BEGIN -->
+            <tr>
+                {% include 'head_logo.html' %}
+            </tr>
+	        <!-- Email Header : END -->
 	    </table>
 	    <!-- Full Bleed Background Section : END -->
 
