utc -> asia/seoul timezone

--- a/static/templates/main_contents.html
+++ b/static/templates/main_contents.html
@@ -12,7 +12,7 @@
                         </tr>
                         <tr>
                             <td style="font-family: sans-serif; font-size: 15px; line-height: 20px; color: #555555; padding: 0 10px 10px; text-align: left;" class="center-on-narrow">
-                                <p style="text-align: center; margin: 0;">게시 시점: {{ post.updated_time }} <a href={{ post.link }}>[ 링크 ]</a></p>
+                                <p style="text-align: center; margin: 0;">게시 시점: {{ post.created_time }} <a href={{ post.link }}>[ 링크 ]</a></p>
                                 <p style="text-align: center; padding-top: 15px; padding-bottom: 15px;">👏🏼{{ post.numbers["reaction"]}} &nbsp; 📤{{ post.numbers["share"]}} &nbsp; 💬{{ post.numbers["comment"]}}</p>
                                 <p style="margin: 0;">{{ post.message }}</p>
                             </td>
