--- a/static/templates/head_section.html
+++ b/static/templates/head_section.html
@@ -1,29 +1,62 @@
-<td style="background-color: #ffffff;">
-    <table role="presentation" cellspacing="0" cellpadding="0" border="0" width="100%">
+<tr>
+    <td width="100%" valign="top" align="center" class="padding-container" style="padding-top: 0px!important; padding-bottom: 18px!important; mso-padding-alt: 0px 0px 18px 0px;">
+      <table width="600" cellpadding="0" cellspacing="0" border="0" align="center" class="wrapper">
         <tr>
-            <td style="padding: 20px; font-family: sans-serif; font-size: 15px; line-height: 20px; color: #555555;">
-                <h1 style="margin: 0 0 10px; font-size: 25px; line-height: 30px; color: #333333; font-weight: normal;">{{ head_section_title }}</h1>
-                <p style="margin: 0 0 10px;">{{ head_section_article }}</p>
-                <!-- <ul style="padding: 0; margin: 0; list-style-type: disc;">
-                    <li style="margin:0 0 10px 20px;" class="list-item-first">A list item.</li>
-                    <li style="margin:0 0 10px 20px;">Another list item here.</li>
-                    <li style="margin: 0 0 0 20px;" class="list-item-last">Everyone gets a list item, list items for everyone!</li>
-                </ul> -->
-            </td>
-        </tr>
-        <tr>
-            <td style="padding: 0 20px 20px;">
-                <!-- Button : BEGIN -->
-                <table align="center" role="presentation" cellspacing="0" cellpadding="0" border="0" style="margin: auto;">
+          <td>
+            <table cellpadding="0" cellspacing="0" border="0">
+              <tr>
+                <td style="border-radius: 3px; border-bottom: 2px solid #d4d4d4;" class="card-1" width="100%" valign="top" align="center">
+                  <table style="border-radius: 3px;" width="600" cellpadding="0" cellspacing="0" border="0" align="center" class="wrapper" bgcolor="#ffffff">
                     <tr>
-                        <td class="button-td button-td-primary" style="border-radius: 4px; background: #222222;">
-                            <a class="button-a button-a-primary" href="https://www.facebook.com/groups/TensorFlowKR" style="background: #222222; border: 1px solid #000000; font-family: sans-serif; font-size: 15px; line-height: 15px; text-decoration: none; padding: 13px 17px; color: #ffffff; display: block; border-radius: 4px;">{{ head_section_button_title }}</a>
-                        </td>
+                      <td align="center">
+                        <table width="500" cellpadding="0" cellspacing="0" border="0" class="container">
+                          <!-- START HEADER IMAGE -->
+                          <tr>
+                            <td align="center" class="hund ripplelink" width="600">
+                              <img align="center" width="600" style="border-radius: 3px 3px 0px 0px; width: 100%; max-width: 600px!important" class="hund" src="{{ head_image }}">
+                            </td>
+                          </tr>
+                          <!-- END HEADER IMAGE -->
+                          <!-- START BODY COPY -->
+                          <tr>
+                            <td class="td-padding" align="left" style="text-align: center; font-family: 'Roboto Mono', monospace; color: #212121!important; font-size: 24px; line-height: 30px; padding-top: 18px; padding-left: 18px!important; padding-right: 18px!important; padding-bottom: 0px!important; mso-line-height-rule: exactly; mso-padding-alt: 18px 18px 0px 13px;">
+                                {{ head_section_title }}
+                            </td>
+                          </tr>
+                          <tr>
+                            <td class="td-padding" align="left" style="font-family: 'Roboto Mono', monospace; color: #212121!important; font-size: 16px; line-height: 24px; padding-top: 18px; padding-left: 18px!important; padding-right: 18px!important; padding-bottom: 0px!important; mso-line-height-rule: exactly; mso-padding-alt: 18px 18px 0px 18px;">
+                                {{ head_section_article }}
+                            </td>
+                          </tr>
+                          <!-- END BODY COPY -->
+                          <!-- BUTTON -->
+                          <tr>
+                            <td align="left" style="padding: 18px 18px 18px 18px; mso-alt-padding: 18px 18px 18px 18px!important;">
+                              <table width="100%" border="0" cellspacing="0" cellpadding="0">
+                                <tr>
+                                  <td>
+                                    <table border="0" cellspacing="0" cellpadding="0">
+                                      <tr>
+                                        <td align="left" style="border-radius: 3px;" bgcolor="#234688">
+                                          <a class="button raised" href="http://paulgoddarddesign.com/email-marketing" target="_blank" style="font-size: 14px; line-height: 14px; font-weight: 500; font-family: Helvetica, Arial, sans-serif; color: #ffffff; text-decoration: none; border-radius: 3px; padding: 10px 25px; border: 1px solid #234688; display: inline-block;">{{ head_section_button_title }}</a>
+                                        </td>
+                                      </tr>
+                                    </table>
+                                  </td>
+                                </tr>
+                              </table>
+                            </td>
+                          </tr>
+                          <!-- END BUTTON -->
+                        </table>
+                      </td>
                     </tr>
-                </table>
-                <!-- Button : END -->
-            </td>
+                  </table>
+                </td>
+              </tr>
+            </table>
+          </td>
         </tr>
-
-    </table>
-</td>
+      </table>
+    </td>
+  </tr>
