icons, fixed height for images

--- a/static/templates/head_section.html
+++ b/static/templates/head_section.html
@@ -37,8 +37,8 @@
                                   <td>
                                     <table border="0" cellspacing="0" cellpadding="0">
                                       <tr>
-                                        <td align="left" style="border-radius: 3px;" bgcolor="#234688">
-                                          <a class="button raised" href="http://paulgoddarddesign.com/email-marketing" target="_blank" style="font-size: 14px; line-height: 14px; font-weight: 500; font-family: Helvetica, Arial, sans-serif; color: #ffffff; text-decoration: none; border-radius: 3px; padding: 10px 25px; border: 1px solid #234688; display: inline-block;">{{ head_section_button_title }}</a>
+                                        <td align="left" style="border-radius: 3px;" bgcolor="orange">
+                                          <a class="button raised" href="http://paulgoddarddesign.com/email-marketing" target="_blank" style="font-size: 14px; line-height: 14px; font-weight: 500; font-family: Helvetica, Arial, sans-serif; color: #ffffff; text-decoration: none; border-radius: 3px; padding: 10px 25px; border: 1px solid #ffaa54; display: inline-block;">{{ head_section_button_title }}</a>
                                         </td>
                                       </tr>
                                     </table>
