--- a/static/templates/main_contents.html
+++ b/static/templates/main_contents.html
@@ -5,35 +5,35 @@
           <tr>
             <td>
               <!-- LEFT COLUMN -->
-              <table align="left" border="0" cellpadding="0" cellspacing="0" class="stack" width="390px" bgcolor="#ffffff">
+              <table align="left" cellpadding="0" cellspacing="0" class="stack" width="390px" bgcolor="#ffffff">
                 <tr>
                   <td style="padding: 0px 0px 18px 0px;">
-                    <table border="0" cellpadding="0" cellspacing="0" class="card-1" style="border-bottom: 2px solid #d4d4d4;">
+                    <table border="0" cellpadding="0" cellspacing="0" class="card-1" style="border-bottom: 2px solid #d4d4d4; border-top: 2px solid #d4d4d4;">
                       <tbody>
                         <tr>
                           <td class="ripplelink" align="left" width="800">
-                            <img src="{{ tmp_posts[0].front_image }}" style="font-weight: bold; border-radius: 3px 3px 0px 0px; display: block; border: 0px; width: 380px; max-width: 800px; height: 230px;" />
+                            <img src="{{ tmp_posts[0].front_image }}" style="font-weight: bold; border-radius: 3px 3px 0px 0px; display: block; width: 375px; max-width: 100%; height: 230px;" />
                           </td>
                         </tr>
                         <tr>
-                            <td bgcolor="#ffffff" class="td-padding" align="left" style="text-align: center; font-family: 'Roboto Mono', monospace; color: #212121!important; font-size: 15px; line-height: 30px; padding-top: 18px; padding-left: 18px!important; padding-right: 18px!important; padding-bottom: 0px!important; mso-line-height-rule: exactly; mso-padding-alt: 18px 18px 0px 13px;">
-                                게시 시점: {{ tmp_posts[0].created_time }} 
+                            <td bgcolor="#ffffff" class="td-padding" align="left" style="text-align: center; font-family: 'Roboto Mono', monospace; color: #212121!important; font-size: 15px; line-height: 30px; padding-top: 18px; padding-left: 18px!important; padding-right: 18px!important; padding-bottom: 0px!important; mso-line-height-rule: exactly; mso-padding-alt: 18px 18px 0px 13px; width: 375px; max-width: 100%;">
+                                {{ tmp_posts[0].created_time }} (GMT+9)
                             </td>
                         </tr>                          
                         <tr>
-                          <td bgcolor="#ffffff" class="td-padding" align="left" style="text-align: center; font-family: 'Roboto Mono', monospace; color: #212121!important; font-size: 22px; line-height: 30px; padding-top: 18px; padding-left: 18px!important; padding-right: 18px!important; padding-bottom: 0px!important; mso-line-height-rule: exactly; mso-padding-alt: 18px 18px 0px 13px;">
+                          <td bgcolor="#ffffff" class="td-padding" align="left" style="text-align: center; font-family: 'Roboto Mono', monospace; color: #212121!important; font-size: 22px; line-height: 30px; padding-top: 18px; padding-left: 18px!important; padding-right: 18px!important; padding-bottom: 0px!important; mso-line-height-rule: exactly; mso-padding-alt: 18px 18px 0px 13px; width: 375px; max-width: 100%;">
                             <img style="display: inline-block; vertical-align: bottom; max-width: 35px;" src="https://github.com/deep-diver/fb-group-post-fetcher/blob/master/static/images/reaction_icon.png?raw=true" width="35px"/> {{ tmp_posts[0].numbers["reaction"]}} <img style="display: inline-block; vertical-align: bottom; max-width: 35px;" src="https://github.com/deep-diver/fb-group-post-fetcher/blob/master/static/images/share_icon.png?raw=true" width="35px"/> {{ tmp_posts[0].numbers["share"]}} <img style="display: inline-block; vertical-align: bottom; max-width: 35px;" src="https://github.com/deep-diver/fb-group-post-fetcher/blob/master/static/images/comment_icon.png?raw=true" width="35px"/> {{ tmp_posts[0].numbers["comment"]}}
                           </td>
                         </tr>
                         <tr>
-                          <td bgcolor="#ffffff" class="td-padding" align="left" style="font-family: 'Roboto Mono', monospace; color: #212121!important; font-size: 16px; line-height: 24px; padding-top: 18px; padding-left: 18px!important; padding-right: 18px!important; padding-bottom: 0px!important; mso-line-height-rule: exactly; mso-padding-alt: 18px 18px 0px 18px;">
+                          <td bgcolor="#ffffff" class="td-padding" align="left" style="font-family: 'Roboto Mono', monospace; color: #212121!important; font-size: 16px; line-height: 24px; padding-top: 18px; padding-left: 18px!important; padding-right: 18px!important; padding-bottom: 0px!important; mso-line-height-rule: exactly; mso-padding-alt: 18px 18px 0px 18px; width: 375px; max-width: 100%;">
                             {{ tmp_posts[0].message }}
                           </td>
                         </tr>
                         <!-- END BODY COPY -->
                         <!-- BUTTON -->
                         <tr>
-                          <td bgcolor="#ffffff" align="left" style="padding: 18px 18px 18px 18px; mso-alt-padding: 18px 18px 18px 18px!important;">
+                          <td bgcolor="#ffffff" align="left" style="padding: 18px 18px 18px 18px; mso-alt-padding: 18px 18px 18px 18px!important; width: 375px; max-width: 100%;">
                             <table width="100%" border="0" cellspacing="0" cellpadding="0">
                               <tr>
                                 <td>
@@ -61,32 +61,32 @@
               <table align="right" border="0" cellpadding="0" cellspacing="0" class="stack" width="390px" bgcolor="#ffffff">
                 <tr>
                   <td style="padding: 0px 0px 18px 0px;">
-                    <table border="0" cellpadding="0" cellspacing="0" class="card-1" style="border-bottom: 2px solid #d4d4d4;">
+                    <table border="0" cellpadding="0" cellspacing="0" class="card-1" style="border-bottom: 2px solid #d4d4d4; border-top: 2px solid #d4d4d4;">
                       <tbody>
                         <tr>
                           <td class="ripplelink" align="left" width="800">
-                            <img src="{{ tmp_posts[1].front_image }}" style="border-radius: 3px 3px 0px 0px; display: block; border: 0px; width: 380px; max-width: 800px; height: 230px;" />
+                            <img src="{{ tmp_posts[1].front_image }}" style="border-radius: 3px 3px 0px 0px; display: block; width: 375px; max-width: 100%; height: 230px;" />
                           </td>
                         </tr>
                         <tr>
-                            <td bgcolor="#ffffff" class="td-padding" align="left" style="text-align: center; font-family: 'Roboto Mono', monospace; color: #212121!important; font-size: 15px; line-height: 30px; padding-top: 18px; padding-left: 18px!important; padding-right: 18px!important; padding-bottom: 0px!important; mso-line-height-rule: exactly; mso-padding-alt: 18px 18px 0px 13px;">
-                                게시 시점: {{ tmp_posts[1].created_time }} 
+                            <td bgcolor="#ffffff" class="td-padding" align="left" style="text-align: center; font-family: 'Roboto Mono', monospace; color: #212121!important; font-size: 15px; line-height: 30px; padding-top: 18px; padding-left: 18px!important; padding-right: 18px!important; padding-bottom: 0px!important; mso-line-height-rule: exactly; mso-padding-alt: 18px 18px 0px 13px; width: 375px; max-width: 100%;">
+                                {{ tmp_posts[1].created_time }} (GMT+9)
                             </td>
                         </tr>                                    
                         <tr>
-                          <td bgcolor="#ffffff" class="td-padding" align="left" style="text-align: center; font-weight: bold; font-family: 'Roboto Mono', monospace; color: #212121!important; font-size: 22px; line-height: 30px; padding-top: 18px; padding-left: 18px!important; padding-right: 18px!important; padding-bottom: 0px!important; mso-line-height-rule: exactly; mso-padding-alt: 18px 18px 0px 13px;">
+                          <td bgcolor="#ffffff" class="td-padding" align="left" style="text-align: center; font-weight: bold; font-family: 'Roboto Mono', monospace; color: #212121!important; font-size: 22px; line-height: 30px; padding-top: 18px; padding-left: 18px!important; padding-right: 18px!important; padding-bottom: 0px!important; mso-line-height-rule: exactly; mso-padding-alt: 18px 18px 0px 13px; width: 375px; max-width: 100%;">
                             <img style="display: inline-block; vertical-align: bottom; max-width: 35px;" src="https://github.com/deep-diver/fb-group-post-fetcher/blob/master/static/images/reaction_icon.png?raw=true" width="35px"/> {{ tmp_posts[1].numbers["reaction"]}} <img style="display: inline-block; vertical-align: bottom; max-width: 35px;" src="https://github.com/deep-diver/fb-group-post-fetcher/blob/master/static/images/share_icon.png?raw=true" width="35px"/> {{ tmp_posts[1].numbers["share"]}} <img style="display: inline-block; vertical-align: bottom; max-width: 35px;" src="https://github.com/deep-diver/fb-group-post-fetcher/blob/master/static/images/comment_icon.png?raw=true" width="35px"/> {{ tmp_posts[1].numbers["comment"]}}
                           </td>
                         </tr>
                         <tr>
-                          <td bgcolor="#ffffff" class="td-padding" align="left" style="font-family: 'Roboto Mono', monospace; color: #212121!important; font-size: 16px; line-height: 24px; padding-top: 18px; padding-left: 18px!important; padding-right: 18px!important; padding-bottom: 0px!important; mso-line-height-rule: exactly; mso-padding-alt: 18px 18px 0px 18px;">
+                          <td bgcolor="#ffffff" class="td-padding" align="left" style="font-family: 'Roboto Mono', monospace; color: #212121!important; font-size: 16px; line-height: 24px; padding-top: 18px; padding-left: 18px!important; padding-right: 18px!important; padding-bottom: 0px!important; mso-line-height-rule: exactly; mso-padding-alt: 18px 18px 0px 18px; width: 375px; max-width: 100%;">
                             {{ tmp_posts[1].message }}
                           </td>
                         </tr>
                         <!-- END BODY COPY -->
                         <!-- BUTTON -->
                         <tr>
-                          <td bgcolor="#ffffff" align="left" style="padding: 18px 18px 18px 18px; mso-alt-padding: 18px 18px 18px 18px!important;">
+                          <td bgcolor="#ffffff" align="left" style="padding: 18px 18px 18px 18px; mso-alt-padding: 18px 18px 18px 18px!important;  width: 375px; max-width: 100%;">
                             <table width="100%" border="0" cellspacing="0" cellpadding="0">
                               <tr>
                                 <td>
