--- a/static/templates/template.html
+++ b/static/templates/template.html
@@ -16,9 +16,6 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">
     <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
     <script src="http://paulgoddarddesign.com/js/ripple.js"></script>
-    <style type="text/css">
-
-    </style>
     <!--[if gte mso 9]>
     <xml>
       <o:OfficeDocumentSettings>
@@ -82,80 +79,9 @@
       </table>
       <![endif]-->
       <!-- END SPACER -->
-
+      {% include 'footer_section.html' %}
       <!-- FOOTER -->
-      <tr>
-        <td width="100%" valign="top" align="center" class="padding-container">
-          <table width="800" cellpadding="0" cellspacing="0" border="0" align="center" class="wrapper">
-            <tr>
-              <td width="100%" valign="top" align="center">
-                <table width="800" cellpadding="0" cellspacing="0" border="0" align="center" class="wrapper" bgcolor="#ffffff">
-                  <tr>
-                    <td align="center">
-                      <table width="800" cellpadding="0" cellspacing="0" border="0" class="container">
 
-                        <tr>
-                            <td class="td-padding" align="center" style="padding-bottom: 30px; font-family: 'Roboto Mono', monospace; color: #212121!important; font-size: 16px; line-height: 24px; padding-top: 0px; padding-left: 0px!important; padding-right: 0px!important; padding-bottom: 0px!important; mso-line-height-rule: exactly; mso-padding-alt: 0px 0px 0px 0px;">
-                              개발자 SNS 방문하기
-                            </td>
-                        </tr>                                  
-                        <tr>
-                          <!-- SOCIAL -->
-                          <td align="center" width="300" style="padding-top: 15px!important; padding-bottom: 18px!important; mso-padding-alt: 0px 0px 18px 0px;">
-                            <table border="0" cellspacing="0" cellpadding="0">
-                              <tr>
-                                <td align="right" valign="top" class="social">
-                                  <a href="https://www.facebook.com/Thomas.CS.Park"
-                                  target="_blank">
-                                  <img src="http://paulgoddarddesign.com/emails/images/material-design/fb-icon.png"
-                                  height="24" alt="Facebook" border="0" style="display:block; max-width: 24px">
-                                  </a>
-                                </td>
-                                <td width="20"></td>
-                                <td align="right" valign="top" class="social">
-                                  <a href="https://twitter.com/algo_diver"
-                                  target="_blank">
-                                  <img src="http://paulgoddarddesign.com/emails/images/material-design/twitter-icon.png"
-                                  height="24" alt="Twitter" border="0" style="display:block; max-width: 24px">
-                                  </a>
-                                </td>
-                                <td width="20"></td>
-                                <td align="right" valign="top" class="social">
-                                  <a href="https://www.linkedin.com/in/park-chansung-35353082/"
-                                  target="_blank">
-                                  <img src="http://paulgoddarddesign.com/emails/images/material-design/linkedin-icon.png"
-                                  height="24" alt="Linkedin" border="0" style="display:block; max-width: 24px">
-                                  </a>
-                                </td>
-                                <td width="20"></td>
-                                <td align="right" valign="top" class="social">
-                                  <a href="https://github.com/deep-diver"
-                                  target="_blank">
-                                  <img src="http://paulgoddarddesign.com/emails/images/material-design/github-icon.png"
-                                  height="24" alt="Github" border="0" style="display:block; max-width: 24px">
-                                  </a>
-                                </td>
-                              </tr>
-                            </table>
-                          </td>
-                          <!-- END SOCIAL -->
-                        </tr>
-                        <tr>
-                          <td class="td-padding" align="center" style="font-family: 'Roboto Mono', monospace; color: #212121!important; font-size: 16px; line-height: 24px; padding-top: 0px; padding-left: 0px!important; padding-right: 0px!important; padding-bottom: 0px!important; mso-line-height-rule: exactly; mso-padding-alt: 0px 0px 0px 0px;">
-                            &copy; 2018 Footer Text
-                          </td>
-                        </tr>
-                          </td>
-                        </tr>
-                      </table>
-                    </td>
-                  </tr>
-                </table>
-              </td>
-            </tr>
-          </table>
-        </td>
-      </tr>
       <!-- FOOTER -->
 
       <!-- SPACER -->
